kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /container1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: eks-php-1
            port:
              number: 8000
      - path: /conatiner2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: eks-php-2
            port:
              number: 8000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: eks-php-1
            port:
              number: 8000
